--- a/nodogsplash.conf
+++ b/nodogsplash.conf
@@ -10,7 +10,7 @@
 # that is to be managed by Nodogsplash.
 # Typically br-lan for the wired and wireless lan.
 #
-GatewayInterface wlp3s0
+GatewayInterface wlp3s0 # Change This for your WIFI Interface
 
 # Parameter: WebRoot
 # Default: /etc/nodogsplash/htdocs
@@ -44,7 +44,7 @@ FirewallRuleSet authenticated-users {
 # Your router may have several interfaces, and you
 # probably want to keep them private from the GatewayInterface.
 # If so, you should block the entire subnets on those interfaces, e.g.:
-#  FirewallRule block to 192.168.0.0/16
+#  FirewallRule block to 192.168.1.0/24
 #  FirewallRule block to 10.0.0.0/8
 
 # Typical ports you will probably want to open up include
@@ -59,7 +59,7 @@ FirewallRuleSet authenticated-users {
 #  FirewallRule allow tcp port 22
 # Or for happy customers allow all
   FirewallRule allow all
-  FirewallRule deny 192.168.1.0/24
+  FirewallRule block to 192.168.1.0/24
 # You might use ipset to easily allow/block range of ips, e.g.: 
 # FirewallRule allow ipset WHITELISTED_IPS
 # FirewallRule allow tcp port 80 ipset WHITELISTED_IPS
