--- a/nodogsplash.conf
+++ b/nodogsplash.conf
@@ -292,7 +292,10 @@ FirewallRuleSet users-to-router {
 #
 # Set to yes (or true or 1), to enable traffic control in Nodogsplash.
 #
-# TrafficControl no
+TrafficControl yes
+DownloadLimit 1024   # 1 Mbps
+UploadLimit 512     # 512 kbps
+
 
 # Parameter: DownloadLimit
 # Default: 0
