--- a/nodogsplash.conf
+++ b/nodogsplash.conf
@@ -44,7 +44,7 @@ FirewallRuleSet authenticated-users {
 # Your router may have several interfaces, and you
 # probably want to keep them private from the GatewayInterface.
 # If so, you should block the entire subnets on those interfaces, e.g.:
-#  FirewallRule block to 192.168.1.0/24
+FirewallRule block to 192.168.1.0/24
 #  FirewallRule block to 10.0.0.0/8
 
 # Typical ports you will probably want to open up include
@@ -292,9 +292,9 @@ FirewallRuleSet users-to-router {
 #
 # Set to yes (or true or 1), to enable traffic control in Nodogsplash.
 #
-TrafficControl yes
-DownloadLimit 1024   # 1 Mbps
-UploadLimit 512     # 512 kbps
+TrafficControl no
+# DownloadLimit 1024   # 1 Mbps
+# UploadLimit 512     # 512 kbps
 
 
 # Parameter: DownloadLimit
