--- a/nodogsplash.conf
+++ b/nodogsplash.conf
@@ -52,8 +52,8 @@ FirewallRule block to 192.168.1.0/24
 # 80 for http,
 # 443 for https,
 # 22 for ssh:
-#  FirewallRule allow tcp port 53	
-#  FirewallRule allow udp port 53	
+FirewallRule allow tcp port 53	
+FirewallRule allow udp port 53	
 #  FirewallRule allow tcp port 80
 #  FirewallRule allow tcp port 443
 #  FirewallRule allow tcp port 22
