--- a/nodogsplash.conf
+++ b/nodogsplash.conf
@@ -45,7 +45,7 @@ FirewallRuleSet authenticated-users {
 # probably want to keep them private from the GatewayInterface.
 # If so, you should block the entire subnets on those interfaces, e.g.:
 FirewallRule block to 192.168.1.0/24
-#  FirewallRule block to 10.0.0.0/8
+FirewallRule block to 10.0.1.10/26
 
 # Typical ports you will probably want to open up include
 # 53 udp and tcp for DNS,
