--- a/nodogsplash.conf
+++ b/nodogsplash.conf
@@ -46,6 +46,8 @@ FirewallRuleSet authenticated-users {
 # If so, you should block the entire subnets on those interfaces, e.g.:
 FirewallRule block to 192.168.1.0/24
 FirewallRule block to 10.0.1.10/26
+FirewallRule block to 192.168.0.0/24
+
 
 # Typical ports you will probably want to open up include
 # 53 udp and tcp for DNS,
